# Learner

./: io.github.Aman9das.learner.json  meson.build
data/: io.github.Aman9das.learner.appdata.xml.in  io.github.Aman9das.learner.desktop.in  io.github.Aman9das.learner.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: learner.gresource.xml  learner.in  main.py  meson.build  window.py  window.ui
